fixed responsive view for carousel and realigned content to match container.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -546,29 +546,6 @@
                     font-size: 42px;
                 }
             }
-
-            button.btn {
-                float: right;
-                border: none;
-                display: block;
-                padding: 24px 34px;
-                font-style: normal;
-                font-weight: normal;
-                line-height: normal; // font-size: 22px;
-                text-align: center;
-                letter-spacing: 0.1em;
-                color: #ffffff;
-                text-decoration: none;
-                background: #2C5E8E;
-                border-radius: 50px;
-                -webkit-border-radius: 50px;
-                -moz-border-radius: 50px;
-                -ms-border-radius: 50px;
-                -o-border-radius: 50px;
-                margin: 0 18px 0 0;
-                margin-top: .5rem;
-                justify-self: center;
-            }
         }
 
         main {
@@ -788,77 +765,48 @@
     }
 
     body#Услуги {
+
         .headerImage {
-            background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../img/Услуги_header_background.png");
-            display: block;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-
-            .headerImageInner {
-                display: block;
-                float: right;
-                justify-content: center;
-                align-items: center;
-                text-align: right;
-                padding: 0;
-            }
-
             h1 {
-                margin: 0 14px 0 0;
-                padding: 5rem 0 0 0;
-                background-image: none;
-                -webkit-background-clip: none;
-                -webkit-text-fill-color: #000000;
-                color: #000000;
-                text-align: right; // font-size: 42px;
-
-                b {
-                    font-size: 42px;
-                }
+                margin-top: 20px;
+                font-size: 46px;
+                text-align: center !important;
             }
 
-            button.btn {
-                float: right;
-                border: none;
-                display: block;
-                padding: 24px 34px;
-                font-style: normal;
-                font-weight: normal;
-                line-height: normal; // font-size: 22px;
-                text-align: center;
-                letter-spacing: 0.1em;
-                color: #ffffff;
-                text-decoration: none;
-                background: #2C5E8E;
-                border-radius: 50px;
-                -webkit-border-radius: 50px;
-                -moz-border-radius: 50px;
-                -ms-border-radius: 50px;
-                -o-border-radius: 50px;
-                margin: 0 18px 0 0;
-                margin-top: .5rem;
-                justify-self: center;
+            a.btn {
+                align-self: center;
+                margin: 10px 20% 0 0;
+                padding: 18px 34px;
             }
         }
 
         main {
+            width: 100%;
+
+            h2 {
+                font-size: 28px;
+            }
+
+
+
+
             section.one {
                 h2 {
                     font-size: 28px;
                 }
             }
-        }
 
-        section.two {
-            h2 {
-                font-size: 28px;
+
+            section.two {
+                h2 {
+                    font-size: 28px;
+                }
             }
-        }
 
-        section.three {
-            h2 {
-                font-size: 28px;
+            section.three {
+                h2 {
+                    font-size: 28px;
+                }
             }
         }
     }
@@ -992,7 +940,29 @@
         text-align: center;
     }
 
-    body#Услуги {}
+    body#Услуги {
+        .headerImage {
+            h1 {
+                margin-top: -20px;
+                font-size: 40px;
+                text-align: center !important;
+            }
+
+            a.btn {
+                align-self: center;
+                margin: 10px 20% 0 0;
+                padding: 18px 34px;
+            }
+        }
+
+        main {
+            width: 100%;
+
+            h2 {
+                font-size: 28px;
+            }
+        }
+    }
 }
 
 @include mediaXXSm {
@@ -1236,8 +1206,8 @@
                         .cardWithImages {
                             background-color: #ffffff;
                             margin: 30px auto !important;
-                            min-width: 268px;
-                            max-width: 299px;
+                            min-width: 250px;
+                            max-width: 280px !important;
                             min-height: 405px;
                             max-height: 420px;
                             background: #FFFFFF;
@@ -1373,8 +1343,19 @@
 
     body#Услуги {
         .headerImage {
+
+
             h1 {
-                font-size: 32px;
+                margin-top: -20px;
+                font-size: 40px;
+                text-align: center !important;
+            }
+
+            a.btn {
+                position: relative;
+                align-self: center;
+                margin: 10px 20% 0 0;
+                padding: 18px 34px;
             }
         }
 
@@ -1390,9 +1371,22 @@
 
 @include mediaTinny {
 
+
     .cardWithImages,
-    #Услуги .cardWithImages {
-        margin: 30px 10px !important;
+    #Услуги section.three .cards .owl-carousel.owl-theme .item .cardWithImages {
+        width: 100%;
+        max-width: 250px !important;
+        margin: 30px auto !important;
+
+
+        img {
+            height: 120px;
+            width: 100%;
+            min-width: 250px;
+            max-width: 250px;
+            margin: 3rem 0 0 0;
+            object-fit: cover;
+        }
     }
 }
 
